kubevirt/add-services/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: k6t-add-services
status:
  ready: true
