kubevirt/add-services/.chainsaw-test/chainsaw-step-00-assert-1.yaml
apiVersion: apiextensions.k8s.io/v1
kind: CustomResourceDefinition
metadata:
  name: virtualmachineinstances.kubevirt.io
status:
  acceptedNames:
    kind: VirtualMachineInstance
    listKind: VirtualMachineInstanceList
    plural: virtualmachineinstances
    singular: virtualmachineinstance
  storedVersions:
  - v1alpha3
