kubevirt/add-services/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: add-services
spec:
  steps:
  - name: step-00
    try:
    - assert:
        file: chainsaw-step-00-assert-1.yaml
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1.yaml
  - name: step-02
    try:
    - apply:
        file: ../add-services.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-03
    try:
    - apply:
        file: vmi.yaml
  - name: step-04
    try:
    - assert:
        file: generated-svc.yaml
